# anon_proxy

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  config.json.example  main.py  merge_gap.json.example  patterns.json.example  pyproject.toml  test_filter.py  test_mask.py
.claude/: settings.local.json
.claude/skills/anon-proxy-triage/: SKILL.md
.github/workflows/: ci.yml
anon_proxy/: __init__.py  crypto.py  eval.py  mapping.py  masker.py  metrics_rollup.py  pipeline.py  privacy_filter.py  regex_detector.py  retention.py  server.py  signatures.py  storage_paths.py  telemetry.py  telemetry_patterns.json  telemetry_report.py  triage_cli.py  upstream.py
anon_proxy/adapters/: __init__.py  anthropic.py  openai.py
anon_proxy/eval_corpus/: __init__.py  _generate_synthetic.py  opf_samples.jsonl  synthetic.jsonl
docs/: awesome-submissions.md  discoverability.md  publishing.md
tests/: conftest.py  test_anthropic_adapter.py  test_crypto.py  test_e2e_pii_storage.py  test_eval.py  test_masker.py  test_metrics_rollup.py  test_openai_adapter.py  test_pipeline.py  test_retention.py  test_server.py  test_signatures.py  test_skill_trust_boundary.py  test_storage_paths.py  test_telemetry.py  test_telemetry_report.py  test_triage_cli.py
