[project]
name = "anon-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.96.0",
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "starlette>=1.0.0",
    "torch>=2.11.0",
    "transformers>=5.6.0",
    "uvicorn[standard]>=0.45.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
